# open_auto_loader

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/: features.md  getting-started.md  index.md  installation.md  reference.md  storage-configs.md
examples/: cloud_ingestion.py  local_quickstart.py
features/: index.html
getting-started/: index.html
installation/: index.html
reference/: index.html
search/: search_index.json
src/open_auto_loader/: __init__.py  engine.py  exceptions.py  factories.py  main.py  scanner.py  schema.py  state.py
src/open_auto_loader/configs/: __init__.py  schema.py  storage.py
src/open_auto_loader/core/: engine.py  reader.py  scanner.py  schema.py  state.py
storage-configs/: index.html
tests/: conftest.py  performance_test.py  test_cloud_support.py  test_configs.py  test_integration.py  test_json_formats.py  test_loader.py  test_metadata.py  test_schema_enforcement.py  test_schema_evolution.py  test_schema_evolution2.py  test_stress.py
