[project]
name = "open-auto-loader"
version = "0.1.2"
description = "A lightweight, Databricks-style autoloader using Polars and SQLite."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nitish Katkade" }]

# Core dependencies required for local execution
dependencies = [
    "polars>=1.39.0",
    "deltalake>=1.5.0",
    "fsspec>=2026.2.0",
    "sqlalchemy>=2.0.48",
    "pyarrow>=23.0.1",
    "connectorx>=0.4.5",
]

[project.optional-dependencies]
# Cloud-specific extras
aws = ["s3fs>=2026.2.0"]
azure = ["adlfs>=2026.2.0"]
gcp = ["gcsfs>=2026.2.0"]
all = [
    "s3fs>=2026.2.0",
    "adlfs>=2026.2.0",
    "gcsfs>=2026.2.0",
]
# Workflow Orchestration
airflow = ["apache-airflow>=2.8.0"]

[project.scripts]
open-auto-loader = "open_auto_loader.main:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.6",
    "tqdm>=4.67.3",
]
